force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>All related credits and debits for a Donor</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TXN-{00000}</displayFormat>
        <label>Transaction #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>