force-app/main/default/objects/Transaction__c/fields/Amount_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Currency__c</fullName>
    <description>The amount of the transaction currency</description>
    <inlineHelpText>The amount of the transaction currency</inlineHelpText>
    <label>Amount Currency</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>