force-app/main/default/objects/Transaction__c/fields/Amount_Points__c.field-meta.xml
<CustomField>
    <fullName>Amount_Points__c</fullName>
    <description>The amount in points for this transaction</description>
    <inlineHelpText>The amount in points for this transaction</inlineHelpText>
    <label>Amount Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>