force-app/main/default/objects/Transaction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This indicates more detail about the transaction.</description>
    <inlineHelpText>This indicates more detail about the transaction.</inlineHelpText>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>