force-app/main/default/objects/Transaction__c/fields/Onbe_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Onbe_Transaction_Id__c</fullName>
    <label>Onbe Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>