force-app/main/default/objects/Transaction__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>The number of retries attempted to process this transaction</description>
    <inlineHelpText>The number of retries attempted to process this transaction</inlineHelpText>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>