force-app/main/default/objects/Transaction__c/fields/Retry_Next__c.field-meta.xml
<CustomField>
    <fullName>Retry_Next__c</fullName>
    <description>Datetime of next retry time</description>
    <inlineHelpText>Datetime of next retry time</inlineHelpText>
    <label>Retry Next</label>
    <type>DateTime</type>
</CustomField>