force-app/main/default/objects/Transaction__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>The Service used to process this Transaction</description>
    <label>Service</label>
    <length>40</length>
    <type>Text</type>
</CustomField>