force-app/main/default/objects/Transaction__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>