force-app/main/default/objects/Transaction__c/fields/Was_Manually_Processed__c.field-meta.xml
<CustomField>
    <fullName>Was_Manually_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the payment was processed outside of Salesforce and should not be processed.</description>
    <label>Was Manually Processed</label>
    <type>Checkbox</type>
</CustomField>