force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Donor__c</columns>
    <columns>Visit__c</columns>
    <columns>Amount_Currency__c</columns>
    <columns>Service__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>